4-ingress/html/nginx-svc-html.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-html
  name: nginx-html
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-html
